@@ -57,7 +57,7 @@ public class SpannerLikeScanner extends BaseScanner<List<DatabaseBlob>>{
 		if(this.current.isEmpty()){
 			return false;
 		}else{
-			this.startKey = this.current.get(this.current.size() - 1).getKey().getPathAndFile();
+			this.startKey = this.current.getLast().getKey().getPathAndFile();
 		}
 		return true;
 	}
